[gd_scene load_steps=4 format=3 uid="uid://dq1r2s3t4u5v6"]

[ext_resource type="Script" path="res://scripts/game/board.gd" id="1_dq1r2"]
[ext_resource type="Texture2D" uid="uid://er2s3t4u5v6w7" path="res://assets/board/board_base.png" id="2_er2s3"]
[ext_resource type="StyleBoxFlat" uid="uid://fs3t4u5v6w7x8" path="res://assets/ui/panel_style.tres" id="3_fs3t4"]

[node name="GameBoard" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_dq1r2")

[node name="BoardBackground" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("2_er2s3")
stretch_mode = 3
expand_mode = 1

[node name="BoardContainer" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 50.0
offset_right = -50.0
offset_bottom = -50.0

[node name="Spaces" type="Node2D" parent="BoardContainer"]

[node name="Players" type="Node2D" parent="BoardContainer"]

[node name="DiceContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -100.0
alignment = 1

[node name="Dice1" type="TextureRect" parent="DiceContainer"]
custom_minimum_size = Vector2(60, 60)
texture = null
expand_mode = 1

[node name="Dice2" type="TextureRect" parent="DiceContainer"]
custom_minimum_size = Vector2(60, 60)
texture = null
expand_mode = 1

[node name="RollButton" type="Button" parent="DiceContainer"]
custom_minimum_size = Vector2(120, 60)
text = "ROLL"
theme_override_styles/normal = ExtResource("3_fs3t4")
theme_override_styles/hover = ExtResource("3_fs3t4")
theme_override_styles/pressed = ExtResource("3_fs3t4")
theme_override_styles/focus = ExtResource("3_fs3t4")

[node name="PlayerInfo" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 100.0
offset_right = -20.0
offset_bottom = -20.0

[node name="CurrentPlayer" type="Label" parent="PlayerInfo"]
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Current Player: "
horizontal_alignment = 1

[node name="PlayerMoney" type="Label" parent="PlayerInfo"]
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Money: $1500"
horizontal_alignment = 1

[node name="PlayerProperties" type="Label" parent="PlayerInfo"]
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Properties: 0"
horizontal_alignment = 1